# wasm-gl

./: Cargo.toml  README.md  package-lock.json
src/: game.rs  lib.rs
src/core/: geometry.rs  graph.rs  material.rs  mod.rs  object3d.rs  renderer.rs  scene.rs  shapes.rs
src/core/shaders/: fragment.glsl  vertex.glsl
static/: index.html
tests/: app.rs
