[package]
name = "wasm-gl"
description = "wasm-gl"
version = "0.1.0"
authors = ["mathieu"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
wee_alloc = { version = "0.4.5", optional = true }
cgmath = "0.18.0"
weblog = "0.3.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
    'console',
    'Window',
    'Document',
    'Element',
    'UiEvent',
    'EventListener',
    'EventTarget',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
  ]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
futures = "0.3.17"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
